# opensearch-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/opensearch_cli/: __init__.py  helpers.py  main.py
